commit---22/06/2026
Removed the HttpConfig
Addid Utils, OmdService, Movies Summary, HttpClientConfig, Rating,