@@ -9,11 +9,22 @@ import java.util.Map;
 
 public class OmdbMapper {
 
-    public static Movie toMoive(Map<String, Object> results){
+    public static Movie toMovie(Map<String, Object> results){
         Movie movie = new Movie();
 
         movie.setTitle((String) results.get("Title"));
-        movie.setYear(parseYear(results.get("Year")));
+        movie.setYear(parseYear((String)results.get("Year")));
+        movie.setRated((String) results.get("Rated"));
+        movie.setPlot((String) results.get("Plot"));
+        movie.setGenre((String) results.get("Genre"));
+        movie.setWriter((String) results.get("Writer"));
+        movie.setDirector((String) results.get("Director"));
+        movie.setLanguage((String) results.get("Language"));
+        movie.setCountry((String) results.get("Country"));
+
+        movie.setActors(split((String) results.get("Actors")));
+        movie.setAwards(split((String) results.get("Awards")));
+        movie.setRuntime(parseRuntime((String)results.get("Runtime")));
 
         return movie;
     }
@@ -34,16 +45,10 @@ public class OmdbMapper {
             return Duration.ZERO;
         }
     }
-    private static List<String> split(String value){
-        try{
-            if(value==null){
-                return List.of();
-            }else{
-                return Arrays.asList(value.split(","));
-            }
-        }catch (Exception e){
-            throw new RuntimeException(e);
-        }
+
+    private static List<String> split(String value) {
+        if (value == null) return List.of();
+        return Arrays.asList(value.split(", "));
     }
 
 }
